force-app/main/default/objects/After_Action_Review__c/After_Action_Review__c.object-meta.xml
<CustomObject>
    <label>After Action Review</label>
    <nameField>
        <displayFormat>AAR-{000000}</displayFormat>
        <label>After Action Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>After Action Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>