force-app/main/default/objects/After_Action_Review__c/fields/AAR_Channel_Partner_Relationship_with_Cu__c.field-meta.xml
<CustomField>
    <fullName>AAR_Channel_Partner_Relationship_with_Cu__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>How would you rate Rubrik&apos;s channel partner&apos;s relationship with the customer</inlineHelpText>
    <label>Partner Relation w/Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reviews</valueSetName>
    </valueSet>
</CustomField>