force-app/main/default/objects/After_Action_Review__c/fields/AAR_Channel_Partner_Relationship_with_Ru__c.field-meta.xml
<CustomField>
    <fullName>AAR_Channel_Partner_Relationship_with_Ru__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <label>Partner Relation w/Rubrik</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reviews</valueSetName>
    </valueSet>
</CustomField>