force-app/main/default/objects/After_Action_Review__c/fields/AAR_Customer_s_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>AAR_Customer_s_Incumbent__c</fullName>
    <description>SAL23-….this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>Did the Customer stay with their existing incumbent</inlineHelpText>
    <label>Customer went with the Incumbent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>