force-app/main/default/objects/After_Action_Review__c/fields/AAR_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>AAR_Incumbent__c</fullName>
    <description>SAL23-….this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>Who is the Customers Incumbent</inlineHelpText>
    <label>Incumbent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actifio</fullName>
            </value>
            <value>
                <fullName>Arcserve</fullName>
            </value>
            <value>
                <fullName>Clumio</fullName>
            </value>
            <value>
                <fullName>Cohesity</fullName>
            </value>
            <value>
                <fullName>Cohesity - FlashRecover</fullName>
            </value>
            <value>
                <fullName>CommVault</fullName>
            </value>
            <value>
                <fullName>DellEMC Avamar</fullName>
            </value>
            <value>
                <fullName>DellEMC DataDomain</fullName>
            </value>
            <value>
                <fullName>DellEMC DPS (Data Protection Suite)</fullName>
            </value>
            <value>
                <fullName>DellEMC IDPA</fullName>
            </value>
            <value>
                <fullName>DellEMC Networker</fullName>
            </value>
            <value>
                <fullName>DellEMC PowerProtect</fullName>
            </value>
            <value>
                <fullName>Druva</fullName>
            </value>
            <value>
                <fullName>HPE Data Protector (MicroFocus)</fullName>
            </value>
            <value>
                <fullName>IBM Spectrum Protect (TSM)</fullName>
            </value>
            <value>
                <fullName>Igneous</fullName>
            </value>
            <value>
                <fullName>Microsoft DPM / Azure Backup</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Unitrends</fullName>
            </value>
            <value>
                <fullName>Veeam</fullName>
            </value>
            <value>
                <fullName>Veritas BackupExec</fullName>
            </value>
            <value>
                <fullName>Veritas NetBackup</fullName>
            </value>
            <value>
                <fullName>Zerto</fullName>
            </value>
            <value>
                <fullName>No Incumbent</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Greenfield</fullName>
            </value>
            <value>
                <fullName>Rubrik</fullName>
            </value>
            <value>
                <fullName>Semperis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>