force-app/main/default/objects/After_Action_Review__c/fields/AAR_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>AAR_Loss_Reason__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <label>Primary Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Champion</fullName>
            </value>
            <value>
                <fullName>Unsuccessful POC</fullName>
            </value>
            <value>
                <fullName>Timing/Not Ready</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Went Dark</fullName>
            </value>
            <value>
                <fullName>Duplicate Opp</fullName>
            </value>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>Lost Budget</fullName>
            </value>
            <value>
                <fullName>Sales Play Not Valid</fullName>
            </value>
            <value>
                <fullName>Refreshed</fullName>
            </value>
            <value>
                <fullName>No AE Activity</fullName>
            </value>
            <value>
                <fullName>Transacted through MSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>