force-app/main/default/objects/After_Action_Review__c/fields/AAR_Missing_Features__c.field-meta.xml
<CustomField>
    <fullName>AAR_Missing_Features__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>What features were missing in the Rubrik product that caused the deal to be lost</inlineHelpText>
    <label>Missing Feature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AAR_Product_Features__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Active Directory Support</fullName>
            </value>
            <value>
                <fullName>API / SDK / Plug-in</fullName>
            </value>
            <value>
                <fullName>Application Recovery (AppFlows) Snappable Support</fullName>
            </value>
            <value>
                <fullName>Azure SQL</fullName>
            </value>
            <value>
                <fullName>AzureStack</fullName>
            </value>
            <value>
                <fullName>Cloud Native (AWS)</fullName>
            </value>
            <value>
                <fullName>Cloud Native (Azure)</fullName>
            </value>
            <value>
                <fullName>Cloud Native (GCP)</fullName>
            </value>
            <value>
                <fullName>Cloud ON</fullName>
            </value>
            <value>
                <fullName>Cloud Out /Archival</fullName>
            </value>
            <value>
                <fullName>Cloud Storage (EFS/FSx/S3/Azure Blob)</fullName>
            </value>
            <value>
                <fullName>Data Classification Snappable Support</fullName>
            </value>
            <value>
                <fullName>DB2 capabilities</fullName>
            </value>
            <value>
                <fullName>EPIC (virtualized) - Support for Physical EPIC setup</fullName>
            </value>
            <value>
                <fullName>EPIC (virtualized) - Support for Virtual EPIC setup</fullName>
            </value>
            <value>
                <fullName>HP UX</fullName>
            </value>
            <value>
                <fullName>Hyper-V</fullName>
            </value>
            <value>
                <fullName>IBM SmartCloud</fullName>
            </value>
            <value>
                <fullName>Kubernetes capabilities</fullName>
            </value>
            <value>
                <fullName>Legacy OS Support (AIX, Solaris, HPUX)</fullName>
            </value>
            <value>
                <fullName>Linux Backup</fullName>
            </value>
            <value>
                <fullName>Linux Power PC</fullName>
            </value>
            <value>
                <fullName>M365</fullName>
            </value>
            <value>
                <fullName>Managed Kubernetes (AKS/EKS/GKE)</fullName>
            </value>
            <value>
                <fullName>Mongo DB Support</fullName>
            </value>
            <value>
                <fullName>MSSQL</fullName>
            </value>
            <value>
                <fullName>MySQL Support</fullName>
            </value>
            <value>
                <fullName>NAS Backup</fullName>
            </value>
            <value>
                <fullName>NASCD</fullName>
            </value>
            <value>
                <fullName>Native Exchange Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>