force-app/main/default/objects/After_Action_Review__c/fields/AAR_Pricing__c.field-meta.xml
<CustomField>
    <fullName>AAR_Pricing__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>How would you rate Rubrik&apos;s pricing structure compared to our competition</inlineHelpText>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reviews</valueSetName>
    </valueSet>
</CustomField>