force-app/main/default/objects/After_Action_Review__c/fields/AAR_Product_Features__c.field-meta.xml
<CustomField>
    <fullName>AAR_Product_Features__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>How would you rate Rubrik&apos;s feature set for the customers requirements compared to our competition</inlineHelpText>
    <label>Product Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reviews</valueSetName>
    </valueSet>
</CustomField>