force-app/main/default/objects/After_Action_Review__c/fields/AAR_Rubrik_Relation_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>AAR_Rubrik_Relation_with_Customer__c</fullName>
    <description>SAL23-.this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>How would you rate Rubrik&apos;s relationship with our customer&apos;s primary decision makers</inlineHelpText>
    <label>Rubrik Relation w/Customer DecisionMaker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reviews</valueSetName>
    </valueSet>
</CustomField>