force-app/main/default/objects/After_Action_Review__c/fields/AAR_What_did_we_think_would_happen__c.field-meta.xml
<CustomField>
    <fullName>AAR_What_did_we_think_would_happen__c</fullName>
    <description>SAL23-…this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <label>What did we think would happen ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>