force-app/main/default/objects/After_Action_Review__c/fields/AAR_What_would_we_do_different_next_time__c.field-meta.xml
<CustomField>
    <fullName>AAR_What_would_we_do_different_next_time__c</fullName>
    <description>SAL23-…this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <label>What can we do different next time?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>