force-app/main/default/objects/After_Action_Review__c/fields/AAR_Win_Loss_Comments__c.field-meta.xml
<CustomField>
    <fullName>AAR_Win_Loss_Comments__c</fullName>
    <description>SAL23-…this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <label>Additional Win Loss Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>