force-app/main/default/objects/After_Action_Review__c/fields/AAR_Winning_Channel_partner__c.field-meta.xml
<CustomField>
    <fullName>AAR_Winning_Channel_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL23-…this field is manually populated by AE for Closed Lost opportunity based on the threshold.</description>
    <inlineHelpText>Who did the customer end up purchasing their chosen solution through</inlineHelpText>
    <label>Winning Channel Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Found no Partner Accounts based on filter criteria.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Reseller, MSP-Reseller, MSP, Alliance Partner</value>
        </filterItems>
        <infoMessage>Partner Accounts</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>After Action Reviews</relationshipLabel>
    <relationshipName>After_Action_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>