force-app/main/default/objects/After_Action_Review__c/fields/ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACV_Amount__c</fullName>
    <formula>Opportunity__r.ACV_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>