force-app/main/default/objects/After_Action_Review__c/fields/Is_sync_with_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_sync_with_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL24-344</description>
    <label>Is sync with Opportunity</label>
    <type>Checkbox</type>
</CustomField>