force-app/main/default/objects/After_Action_Review__c/fields/Is_there_a_Winning_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Winning_Channel_Partner__c</fullName>
    <label>Is there a Winning Channel Partner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>