force-app/main/default/objects/After_Action_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>SAL23- …. Field is auto populated on the AAR field from the Opportunity that was Closed Lost.</description>
    <inlineHelpText>Opportunity that has been closed, auto populated.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>After Action Reviews</relationshipLabel>
    <relationshipName>After_Action_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>