force-app/main/default/objects/After_Action_Review__c/fields/Opportunity_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Lost_Reason__c</fullName>
    <formula>TEXT(Opportunity__r.Lost_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed Lost Reason</label>
    <type>Text</type>
</CustomField>