force-app/main/default/objects/After_Action_Review__c/fields/Opportunity_ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ClosedDate__c</fullName>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>