force-app/main/default/objects/After_Action_Review__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>After_Action_Review</relationshipName>
    <type>Lookup</type>
</CustomField>