force-app/main/default/objects/After_Action_Review__c/fields/Sales_Engineer_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Manager_Email__c</fullName>
    <label>Sales Engineer Manager Email</label>
    <type>Email</type>
</CustomField>