force-app/main/default/objects/After_Action_Review__c/fields/Sync_error_message__c.field-meta.xml
<CustomField>
    <fullName>Sync_error_message__c</fullName>
    <description>SAL24-344</description>
    <label>Sync error message</label>
    <type>TextArea</type>
</CustomField>