force-app/main/default/objects/After_Action_Review__c/recordTypes/AMER.recordType-meta.xml
<RecordType>
    <fullName>AMER</fullName>
    <active>true</active>
    <label>AMER</label>
</RecordType>