force-app/main/default/objects/After_Action_Review__c/recordTypes/AMER_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>AMER_ReadOnly</fullName>
    <active>true</active>
    <label>AMER-ReadOnly</label>
</RecordType>