force-app/main/default/objects/After_Action_Review__c/recordTypes/Non_AMER.recordType-meta.xml
<RecordType>
    <fullName>Non_AMER</fullName>
    <active>true</active>
    <label>Non-AMER</label>
</RecordType>