force-app/main/default/objects/After_Action_Review__c/recordTypes/Non_AMER_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>Non_AMER_ReadOnly</fullName>
    <active>true</active>
    <label>Non-AMER-ReadOnly</label>
</RecordType>